clients/ffi/include/tarwyn.h

typedef struct Handle Handle;
int xt_put_integer_list(const struct Handle *handle,
                        const char *channel,
                        const int32_t *values,
                        size_t count);
int xt_get_integer_list(const struct Handle *handle,
                        const char *channel,
                        int32_t *out,
                        size_t capacity,
                        size_t *out_len);
int xt_put_long_list(const struct Handle *handle,
                     const char *channel,
                     const int64_t *values,
                     size_t count);
int xt_get_long_list(const struct Handle *handle,
                     const char *channel,
                     int64_t *out,
                     size_t capacity,
                     size_t *out_len);
int xt_put_boolean_list(const struct Handle *handle,
                        const char *channel,
                        const bool *values,
                        size_t count);
int xt_get_boolean_list(const struct Handle *handle,
                        const char *channel,
                        bool *out,
                        size_t capacity,
                        size_t *out_len);