clients/java-client/gen/tarwyn/ffi/tarwyn_h.java


    /**
     * Address for:
     * {@snippet lang=c :
     * int xt_put_integer_list(const struct Handle *handle, const char *channel, const int32_t *values, size_t count)
     * }
     */
    public static MemorySegment xt_put_integer_list$address() {
        return xt_put_integer_list.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int xt_put_integer_list(const struct Handle *handle, const char *channel, const int32_t *values, size_t count)
     * }
     */
    public static int xt_put_integer_list(MemorySegment handle, MemorySegment channel, MemorySegment values, long count) {
        var mh$ = xt_put_integer_list.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("xt_put_integer_list", handle, channel, values, count);
            }
            return (int)mh$.invokeExact(handle, channel, values, count);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class xt_get_integer_list {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            tarwyn_h.C_INT,
            tarwyn_h.C_POINTER,
            tarwyn_h.C_POINTER,
            tarwyn_h.C_POINTER,
            tarwyn_h.C_LONG,
            tarwyn_h.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("xt_get_integer_list");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int xt_get_integer_list(const struct Handle *handle, const char *channel, int32_t *out, size_t capacity, size_t *out_len)
     * }
     */
    public static FunctionDescriptor xt_get_integer_list$descriptor() {
        return xt_get_integer_list.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int xt_get_integer_list(const struct Handle *handle, const char *channel, int32_t *out, size_t capacity, size_t *out_len)
     * }
     */
    public static MethodHandle xt_get_integer_list$handle() {
        return xt_get_integer_list.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int xt_get_integer_list(const struct Handle *handle, const char *channel, int32_t *out, size_t capacity, size_t *out_len)
     * }
     */
    public static MemorySegment xt_get_integer_list$address() {
        return xt_get_integer_list.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int xt_get_integer_list(const struct Handle *handle, const char *channel, int32_t *out, size_t capacity, size_t *out_len)
     * }
     */
    public static int xt_get_integer_list(MemorySegment handle, MemorySegment channel, MemorySegment out, long capacity, MemorySegment out_len) {
        var mh$ = xt_get_integer_list.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("xt_get_integer_list", handle, channel, out, capacity, out_len);
            }
            return (int)mh$.invokeExact(handle, channel, out, capacity, out_len);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class xt_put_long_list {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            tarwyn_h.C_INT,
            tarwyn_h.C_POINTER,
            tarwyn_h.C_POINTER,
            tarwyn_h.C_POINTER,
            tarwyn_h.C_LONG
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("xt_put_long_list");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int xt_put_long_list(const struct Handle *handle, const char *channel, const int64_t *values, size_t count)
     * }
     */
    public static FunctionDescriptor xt_put_long_list$descriptor() {
        return xt_put_long_list.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int xt_put_long_list(const struct Handle *handle, const char *channel, const int64_t *values, size_t count)
     * }
     */
    public static MethodHandle xt_put_long_list$handle() {
        return xt_put_long_list.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int xt_put_long_list(const struct Handle *handle, const char *channel, const int64_t *values, size_t count)
     * }
     */
    public static MemorySegment xt_put_long_list$address() {
        return xt_put_long_list.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int xt_put_long_list(const struct Handle *handle, const char *channel, const int64_t *values, size_t count)
     * }
     */
    public static int xt_put_long_list(MemorySegment handle, MemorySegment channel, MemorySegment values, long count) {
        var mh$ = xt_put_long_list.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("xt_put_long_list", handle, channel, values, count);
            }
            return (int)mh$.invokeExact(handle, channel, values, count);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class xt_get_long_list {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            tarwyn_h.C_INT,
            tarwyn_h.C_POINTER,
            tarwyn_h.C_POINTER,
            tarwyn_h.C_POINTER,
            tarwyn_h.C_LONG,
            tarwyn_h.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("xt_get_long_list");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int xt_get_long_list(const struct Handle *handle, const char *channel, int64_t *out, size_t capacity, size_t *out_len)
     * }
     */
    public static FunctionDescriptor xt_get_long_list$descriptor() {
        return xt_get_long_list.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int xt_get_long_list(const struct Handle *handle, const char *channel, int64_t *out, size_t capacity, size_t *out_len)
     * }
     */
    public static MethodHandle xt_get_long_list$handle() {
        return xt_get_long_list.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int xt_get_long_list(const struct Handle *handle, const char *channel, int64_t *out, size_t capacity, size_t *out_len)
     * }
     */
    public static MemorySegment xt_get_long_list$address() {
        return xt_get_long_list.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int xt_get_long_list(const struct Handle *handle, const char *channel, int64_t *out, size_t capacity, size_t *out_len)
     * }
     */
    public static int xt_get_long_list(MemorySegment handle, MemorySegment channel, MemorySegment out, long capacity, MemorySegment out_len) {
        var mh$ = xt_get_long_list.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("xt_get_long_list", handle, channel, out, capacity, out_len);
            }
            return (int)mh$.invokeExact(handle, channel, out, capacity, out_len);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class xt_put_boolean_list {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            tarwyn_h.C_INT,
            tarwyn_h.C_POINTER,
            tarwyn_h.C_POINTER,
            tarwyn_h.C_POINTER,
            tarwyn_h.C_LONG
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("xt_put_boolean_list");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int xt_put_boolean_list(const struct Handle *handle, const char *channel, const bool *values, size_t count)
     * }
     */
    public static FunctionDescriptor xt_put_boolean_list$descriptor() {
        return xt_put_boolean_list.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int xt_put_boolean_list(const struct Handle *handle, const char *channel, const bool *values, size_t count)
     * }
     */
    public static MethodHandle xt_put_boolean_list$handle() {
        return xt_put_boolean_list.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int xt_put_boolean_list(const struct Handle *handle, const char *channel, const bool *values, size_t count)
     * }
     */
    public static MemorySegment xt_put_boolean_list$address() {
        return xt_put_boolean_list.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int xt_put_boolean_list(const struct Handle *handle, const char *channel, const bool *values, size_t count)
     * }
     */
    public static int xt_put_boolean_list(MemorySegment handle, MemorySegment channel, MemorySegment values, long count) {
        var mh$ = xt_put_boolean_list.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("xt_put_boolean_list", handle, channel, values, count);
            }
            return (int)mh$.invokeExact(handle, channel, values, count);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class xt_get_boolean_list {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            tarwyn_h.C_INT,
            tarwyn_h.C_POINTER,
            tarwyn_h.C_POINTER,
            tarwyn_h.C_POINTER,
            tarwyn_h.C_LONG,
            tarwyn_h.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("xt_get_boolean_list");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int xt_get_boolean_list(const struct Handle *handle, const char *channel, bool *out, size_t capacity, size_t *out_len)
     * }
     */
    public static FunctionDescriptor xt_get_boolean_list$descriptor() {
        return xt_get_boolean_list.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int xt_get_boolean_list(const struct Handle *handle, const char *channel, bool *out, size_t capacity, size_t *out_len)
     * }
     */
    public static MethodHandle xt_get_boolean_list$handle() {
        return xt_get_boolean_list.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int xt_get_boolean_list(const struct Handle *handle, const char *channel, bool *out, size_t capacity, size_t *out_len)
     * }
     */
    public static MemorySegment xt_get_boolean_list$address() {
        return xt_get_boolean_list.ADDR;
    }
